--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,9 @@
 /*  your css code here. If applicable */
+#f1{
+background:yellow;
+	text-align:center;
+}
+#f2{
+background:yellow;
+	text-align:center;
+}
