--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 /*  your css code here. If applicable */
 #f1{
-background:yellow;
+ 
 	text-align:center;
 }
 #f2{
-background:yellow;
+ 
 	text-align:center;
+}
+body{
+	background:rgb(255, 255, 0);
 }
